Feat: profile 페이지 구현 UI 기준 (#9)
* feat: navigation-bar 마크업 구현(반응형 제외)

* chore: slice 예시 및 구조

* chore: store 세팅

* feat: 타입 정보 해결된 useDispatch, useSelector 훅 작성

* feat: selected props 추가

* chore: drawer 구현을 위한 framer 설치

* feat: useDrawer 커스텀 훅 작성

* feat: Dim 컴포넌트 (dimmed 처리를 위함) 구현

* feat: drawer footer 구현

* feat: drawer 구현

* feat: header 내부 컴포넌트 (프로필, 메뉴 목록) 구현

* feat: 반응형 header 구현

* styles: global font 추가

* chore: minor css change

* feat: 카테고리 타입 추가, signup 라우팅 연결

* refactor: React.FC 타입 제거

* feat: 프로필 페이지 라우팅 연결

* chore: 코드 정리

* feat: profile 페이지 헤더 구현, 구조 세팅

* chore: current

* fix: public 복구

* feat: 상세페이지 버튼 구현

* chore: svg 업로드

* feat: 프로필 페이지 UI 구현

* feat: 버튼 md 사이즈 구현

* feat: 헤더와 nav 버튼 구현

* feat: 유저정보를 위한 프로필, 유저정보 수정, 유저 PW 변경 (API X)

* chore: current - transaction-info

* feat: 와플온도 UI 구현

* chore: minor change

* feat: kakao map 지도 띄우기

* feat: 위치 변경 UI 구현

* fix: 지도 렌더링 문제 해결 (useCallback)

* chore: 대체 이미지 업로드

* chore: 카카오 map 라이브러리 설치 및 모바일 개발자도구 코드

* chore: 마커 이미지

* chore: 마커 이미지

* feat: 카카오 동네 위치 마커 구현

* feat: api 함수 작성 및 User 타입 정보

* feat: api mocking response 작성

* feat: 타입 정보 및 API 호출함수 초안 작성

* chore: 서버 배포 URL 수정

* refactor: 테스트 콘솔 삭제

* feat: 로딩중 스켈레톤 구현

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- 모바일 개발자도구 -->
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>
+      eruda.init();
+    </script>
+
     <title>와플마켓</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- services와 clusterer, drawing 라이브러리 불러오기 -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services,clusterer,drawing"
+    ></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
